[project]
name = "celesledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.4.0",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langgraph>=0.6.6",
    "mysql-connector-python>=9.4.0",
    "sqlalchemy>=2.0.43",
]
