[project]
name = "celesledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hf-xet>=1.1.10",
    "ipython>=9.4.0",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-huggingface>=0.3.1",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph[postgres]>=0.6.6",
    "langmem>=0.0.29",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
